--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div class="update-text">STAY UPTO DATE ABOUT OUR LATEST OFFERS</div>
         <div class="update-email">
           <form class="email">
-            <span class="email-icon">✉</span>
+            <span class="email-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#4f4f4f" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-mail-icon lucide-mail"><path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"/><rect x="2" y="4" width="20" height="16" rx="2"/></svg></span>
             <input type="email" placeholder="Enter your email address" />
           </form>
           <div class="subscribe-button">
@@ -573,3 +573,4 @@
     </div>
   </body>
 </html>
+
